--- a/src/site/components/PlanningView/PlanningView.scss
+++ b/src/site/components/PlanningView/PlanningView.scss
@@ -15,11 +15,11 @@
   text-align: center;
   
   .buttonLeft {
-    flex: 1 1 0;
+    flex: 1 1;
   }
   
   .buttonRight {
-    flex: 1 1 0;
+    flex: 1 1;
   }
 
 }
@@ -47,26 +47,26 @@
       }
 
       > div:nth-child(1) {
-        flex: 1 1 0;
+        flex: 1 1;
       }       
       
       > div:nth-child(2) {
-        flex: 1 1 0;
+        flex: 1 1;
       }       
       
       > div:nth-child(3) {
-        flex: 2 1 0;
+        flex: 2 1;
         text-overflow: ellipsis;
         overflow-x: hidden;
         white-space: nowrap;
         @media (max-width: 660px) {
-          flex: 3 1 0;
+          flex: 3 1;
         }
       }       
       
       > div:nth-child(4) {
         
-        flex: 2 1 0;
+        flex: 2 1;
         text-overflow: ellipsis;
         overflow-x: hidden;
         white-space: nowrap;
